@@ -743,8 +743,7 @@ void Spreadsheet::clear(const QVector<Column*>& columns) {
 	// 	if (formulaModeActive()) {
 	// 		for (auto* col : selectedColumns()) {
 	// 			col->setSuppressDataChangedSignal(true);
-	// 			col->clearFormulas();
-	// 			col->setSuppressDataChangedSignal(false);
+	// 			col->clearFormulas();	// 			col->setSuppressDataChangedSignal(false);
 	// 			col->setChanged();
 	// 		}
 	// 	} else {
@@ -769,6 +768,155 @@ void Spreadsheet::clearMasks() {
 	beginMacro(i18n("%1: clear all masks", name()));
 	for (auto* col : children<Column>())
 		col->clearMasks();
+	endMacro();
+}
+
+/*!
+ * transposes the spreadsheet.
+ */
+void Spreadsheet::transpose() {
+	WAIT_CURSOR_AUTO_RESET;
+
+	const auto& columns = children<Column>();
+	const int cols = columns.count();
+	const int rows = rowCount();
+
+	if (cols == 0 || rows == 0)
+		return;
+
+	// determine the new column mode which can hold all data without loss
+	bool hasInt = false;
+	bool hasBigInt = false;
+	bool hasDouble = false;
+	for (auto* col : columns) {
+		const auto mode = col->columnMode();
+		if (mode == AbstractColumn::ColumnMode::Integer)
+			hasInt = true;
+		else if (mode == AbstractColumn::ColumnMode::BigInt)
+			hasBigInt = true;
+		else if (mode == AbstractColumn::ColumnMode::Double)
+			hasDouble = true;
+	}
+
+	AbstractColumn::ColumnMode newMode = AbstractColumn::ColumnMode::Double;
+	if (!hasDouble && hasBigInt)
+		newMode = AbstractColumn::ColumnMode::BigInt;
+	else if (!hasDouble && !hasBigInt && hasInt)
+		newMode = AbstractColumn::ColumnMode::Integer;
+
+	// create a copy of the current column data
+	struct ColumnData {
+		AbstractColumn::ColumnMode mode;
+		QVector<double> numericData;
+		QVector<int> integerData;
+		QVector<qint64> bigIntData;
+		QVector<QString> textData;
+	};
+
+	QVector<ColumnData> originalData;
+	originalData.reserve(cols);
+
+	for (int col = 0; col < cols; ++col) {
+		Column* column = columns.at(col);
+		ColumnData data;
+		data.mode = column->columnMode();
+
+		switch (data.mode) {
+		case AbstractColumn::ColumnMode::Double:
+			data.numericData.reserve(rows);
+			for (int row = 0; row < rows; ++row)
+				data.numericData << column->valueAt(row);
+			break;
+		case AbstractColumn::ColumnMode::Integer:
+			data.integerData.reserve(rows);
+			for (int row = 0; row < rows; ++row)
+				data.integerData << column->integerAt(row);
+			break;
+		case AbstractColumn::ColumnMode::BigInt:
+			data.bigIntData.reserve(rows);
+			for (int row = 0; row < rows; ++row)
+				data.bigIntData << column->bigIntAt(row);
+			break;
+		case AbstractColumn::ColumnMode::Text:
+			data.textData.reserve(rows);
+			for (int row = 0; row < rows; ++row)
+				data.textData << column->textAt(row);
+			break;
+		case AbstractColumn::ColumnMode::DateTime:
+		case AbstractColumn::ColumnMode::Month:
+		case AbstractColumn::ColumnMode::Day:
+			break;
+		}
+
+		originalData << data;
+	}
+
+	beginMacro(i18n("%1: transpose", name()));
+
+	// if the first column is text, use its values to name the new columns
+	auto* firstCol = columns.first();
+	const bool useFirstColAsNames = (firstCol->columnMode() == AbstractColumn::ColumnMode::Text);
+	if (useFirstColAsNames) {
+		setRowCount(cols - 1);
+		setColumnCount(rows);
+
+		const auto& newColumns = children<Column>();
+		const auto& textData = originalData.first().textData;
+		for (int i = 0; i < rows; ++i)
+			newColumns.at(i)->setName(textData.at(i));
+	} else {
+		setRowCount(cols);
+		setColumnCount(rows);
+	}
+
+	const auto& newColumns = children<Column>();
+	const int newCols = columnCount();
+	const int newRows = rowCount();
+
+	// fill new columns with transposed data
+	for (int col = 0; col < newCols; ++col) {
+		auto* column = newColumns.at(col);
+		column->setColumnMode(newMode);
+
+		int offset = useFirstColAsNames ? 1 : 0;
+		for (int row = 0; row < newRows; ++row) {
+			const ColumnData& srcData = originalData.at(row + offset);
+
+			switch (column->columnMode()) {
+			case AbstractColumn::ColumnMode::Double:
+				if (srcData.mode == AbstractColumn::ColumnMode::Double) {
+					if (col < srcData.numericData.size())
+						column->setValueAt(row, srcData.numericData.at(col));
+				} else if (srcData.mode == AbstractColumn::ColumnMode::Integer) {
+					if (col < srcData.integerData.size())
+						column->setValueAt(row, srcData.integerData.at(col));
+				} else if (srcData.mode == AbstractColumn::ColumnMode::BigInt) {
+					if (col < srcData.bigIntData.size())
+						column->setValueAt(row, srcData.bigIntData.at(col));
+				}
+				break;
+			case AbstractColumn::ColumnMode::Integer:
+				if (col < srcData.integerData.size())
+					column->setIntegerAt(row, srcData.integerData.at(col));
+				break;
+			case AbstractColumn::ColumnMode::BigInt:
+				if (srcData.mode == AbstractColumn::ColumnMode::BigInt) {
+					if (col < srcData.bigIntData.size())
+						column->setBigIntAt(row, srcData.bigIntData.at(col));
+				} else if (srcData.mode == AbstractColumn::ColumnMode::Integer) {
+					if (col < srcData.integerData.size())
+						column->setBigIntAt(row, srcData.integerData.at(col));
+				}
+				break;
+			case AbstractColumn::ColumnMode::Text:
+			case AbstractColumn::ColumnMode::DateTime:
+			case AbstractColumn::ColumnMode::Month:
+			case AbstractColumn::ColumnMode::Day:
+				break;
+			}
+		}
+	}
+
 	endMacro();
 }
 
